--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
         <div class="header">
             <h1>Licznik tempa</h1>
-            <p class="description">Oblicz jak wszybko musisz biec na konkretnych odcinkach aby uzyskać oczekiwany czas
+            <p class="description">Oblicz jak szybko musisz biec na konkretnych odcinkach aby uzyskać oczekiwany czas
                 na całym dystansie</p>
         </div>
         <div class="app-body"> <label for="distance">Cały dystans:</label>
